--- a/test-output/old/All Test Suite/methods-alphabetical.html
+++ b/test-output/old/All Test Suite/methods-alphabetical.html
@@ -1,18 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>All Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@229d10bd]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="929362">  <td>24/10/01 22:41:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@63a65a25]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:09</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@229d10bd]">LogoutTest</td> 
+<tr bgcolor="929362">  <td>24/10/01 22:41:36</td>   <td>-2105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@63a65a25]">LogoutTest</td> 
   <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:09</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@229d10bd]">currentUrlTest</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:08</td>   <td>-846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@229d10bd]">launch</td> 
+<tr bgcolor="929362">  <td>24/10/01 22:41:36</td>   <td>-2121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@63a65a25]">currentUrlTest</td> 
   <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:09</td>   <td>-44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest()[pri:2, instance:TestNG.SwagLabsTest@229d10bd]">loginTest</td> 
+<tr bgcolor="929362">  <td>24/10/01 22:41:32</td>   <td>-6872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@63a65a25]">launch</td> 
   <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:06</td>   <td>-2980</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup()[pri:0, instance:TestNG.SwagLabsTest@229d10bd]">&gt;&gt;setup</td> 
+<tr bgcolor="929362">  <td>24/10/01 22:41:34</td>   <td>-4316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest()[pri:2, instance:TestNG.SwagLabsTest@63a65a25]">loginTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="929362">  <td>24/10/01 22:41:30</td>   <td>-8238</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup()[pri:0, instance:TestNG.SwagLabsTest@63a65a25]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/09/30 10:33:09</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.titleTest()[pri:4, instance:TestNG.SwagLabsTest@229d10bd]">titleTest</td> 
-  <td></td>   <td></td> </tr>
 </table>
