--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,46 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">All Test Suite</th></tr>
-<tr><td><a href="#t0">C:/Users/BHAKTI/Selenium Automation Projects/FirstSeleniumWebdriverScript</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">8,380</td><td></td><td></td></tr>
+<tr><td><a href="#t0">FirstSeleniumWebdriverScript</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,859</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">C:/Users/BHAKTI/Selenium Automation Projects/FirstSeleniumWebdriverScript &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNG.SwagLabsTest</td><td><a href="#m0">currentUrlTest</a></td><td rowspan="1">1727836896869</td><td rowspan="1">0</td></tr><tr><th colspan="4">C:/Users/BHAKTI/Selenium Automation Projects/FirstSeleniumWebdriverScript &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">TestNG.SwagLabsTest</td><td><a href="#m1">LogoutTest</a></td><td rowspan="1">1727836896885</td><td rowspan="1">2105</td></tr><tr class="passedeven"><td><a href="#m2">launch</a></td><td rowspan="1">1727836892118</td><td rowspan="1">2551</td></tr><tr class="passedeven"><td><a href="#m3">loginTest</a></td><td rowspan="1">1727836894674</td><td rowspan="1">2195</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">FirstSeleniumWebdriverScript &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TestNG.SwagLabsTest</td><td><a href="#m0">LogoutTest</a></td><td rowspan="1">1727837485101</td><td rowspan="1">2123</td></tr><tr class="passedeven"><td><a href="#m1">currentUrlTest</a></td><td rowspan="1">1727837485090</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m2">launch</a></td><td rowspan="1">1727837480309</td><td rowspan="1">2570</td></tr><tr class="passedeven"><td><a href="#m3">loginTest</a></td><td rowspan="1">1727837482885</td><td rowspan="1">2201</td></tr><tr class="passedodd"><td rowspan="2">TestNG.TestAnnotations</td><td><a href="#m4">testmethod1</a></td><td rowspan="1">1727837487323</td><td rowspan="1">0</td></tr><tr class="passedodd"><td><a href="#m5">testmethod2</a></td><td rowspan="1">1727837487326</td><td rowspan="1">0</td></tr><tr class="passedeven"><td rowspan="1">TestNG.sampleTestNG_class</td><td><a href="#m6">titleTest</a></td><td rowspan="1">1727837487328</td><td rowspan="1">8</td></tr></tbody>
 </table>
-<h2>C:/Users/BHAKTI/Selenium Automation Projects/FirstSeleniumWebdriverScript</h2><h3 id="m0">TestNG.SwagLabsTest#currentUrlTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [https://www.saucedemo.com/inventory.htmll] but found [https://www.saucedemo.com/inventory.html]
-	at org.testng.Assert.fail(Assert.java:110)
-	at org.testng.Assert.failNotEquals(Assert.java:1413)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
-	at org.testng.Assert.assertEquals(Assert.java:131)
-	at org.testng.Assert.assertEquals(Assert.java:655)
-	at org.testng.Assert.assertEquals(Assert.java:665)
-	at TestNG.SwagLabsTest.currentUrlTest(SwagLabsTest.java:53)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:677)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:221)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:50)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:969)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:194)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:148)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at org.testng.TestRunner.privateRun(TestRunner.java:829)
-	at org.testng.TestRunner.run(TestRunner.java:602)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:431)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:391)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:330)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1256)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1176)
-	at org.testng.TestNG.runSuites(TestNG.java:1099)
-	at org.testng.TestNG.run(TestNG.java:1067)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:65)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:105)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestNG.SwagLabsTest#LogoutTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>FirstSeleniumWebdriverScript</h2><h3 id="m0">TestNG.SwagLabsTest#LogoutTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestNG.SwagLabsTest#currentUrlTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">TestNG.SwagLabsTest#launch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">TestNG.SwagLabsTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestNG.TestAnnotations#testmethod1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">TestNG.TestAnnotations#testmethod2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">TestNG.sampleTestNG_class#titleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
