--- a/test-output/old/All Test Suite/methods.html
+++ b/test-output/old/All Test Suite/methods.html
@@ -1,16 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>All Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="929362">  <td>24/10/01 22:41:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup()[pri:0, instance:TestNG.SwagLabsTest@63a65a25]">&gt;&gt;setup</td> 
+<tr bgcolor="727a61">  <td>24/10/01 22:51:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@56a6d5a6]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/10/01 22:41:36</td>   <td>6117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@63a65a25]">currentUrlTest</td> 
+<tr bgcolor="806beb">  <td>24/10/01 22:51:15</td>   <td>-11631</td> <td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeTest()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="727a61">  <td>24/10/01 22:51:22</td>   <td>-4340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest()[pri:2, instance:TestNG.SwagLabsTest@56a6d5a6]">loginTest</td> 
   <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/10/01 22:41:34</td>   <td>3922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest()[pri:2, instance:TestNG.SwagLabsTest@63a65a25]">loginTest</td> 
-  <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/10/01 22:41:38</td>   <td>8238</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@63a65a25]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="727a61">  <td>24/10/01 22:51:19</td>   <td>-7558</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup()[pri:0, instance:TestNG.SwagLabsTest@56a6d5a6]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/10/01 22:41:32</td>   <td>1366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@63a65a25]">launch</td> 
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>112</td> <td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterTest()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="727a61">  <td>24/10/01 22:51:25</td>   <td>-2135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@56a6d5a6]">currentUrlTest</td> 
   <td>main@295530567</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>24/10/01 22:41:36</td>   <td>6133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@63a65a25]">LogoutTest</td> 
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>242</td> <td title="&lt;&lt;TestAnnotations.afterSuite()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="727a61">  <td>24/10/01 22:51:20</td>   <td>-6916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@56a6d5a6]">launch</td> 
   <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations.testmethod2()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">testmethod2</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeMethod()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>102</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterClass()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations.testmethod1()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">testmethod1</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterMethod()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:15</td>   <td>-11640</td> <td title="&gt;&gt;TestAnnotations.beforeSuite()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeClass()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterMethod()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="727a61">  <td>24/10/01 22:51:25</td>   <td>-2124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@56a6d5a6]">LogoutTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="959ed8">  <td>24/10/01 22:51:27</td>   <td>113</td> <td>&nbsp;</td><td title="&lt;&lt;sampleTestNG_class.closeBrowser()[pri:0, instance:TestNG.sampleTestNG_class@4e91d63f]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="806beb">  <td>24/10/01 22:51:27</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeMethod()[pri:0, instance:TestNG.TestAnnotations@1a04f701]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="959ed8">  <td>24/10/01 22:51:27</td>   <td>103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="sampleTestNG_class.titleTest()[pri:0, instance:TestNG.sampleTestNG_class@4e91d63f]">titleTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="959ed8">  <td>24/10/01 22:51:15</td>   <td>-11631</td> <td>&nbsp;</td><td title="&gt;&gt;sampleTestNG_class.setup()[pri:0, instance:TestNG.sampleTestNG_class@4e91d63f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
 </table>
