parametrisation using @parameters, including cross-browser testing

--- a/test-output/old/All Test Suite/methods-not-run.html
+++ b/test-output/old/All Test Suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>TestNG.SwagLabsTest.titleTest</td></tr>
+<tr><td>TestNG.SwagLabsTest.titleTest</td></tr>
+<tr><td>TestNG.SwagLabsTest.titleTest</td></tr>
 </table>
