--- a/test-output/old/All Test Suite/toc.html
+++ b/test-output/old/All Test Suite/toc.html
@@ -8,22 +8,38 @@
 <h3><p align="center">Results for<br/><em>All Test Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
-<td>7 methods:<br/>
+<td>3 tests</td>
+<td><a target='mainFrame' href='classes.html'>1 class</a></td>
+<td>12 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (1)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (3)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>FirstSeleniumWebdriverScript (7/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>FirstSeleniumWebdriverScript (1/2/1)</td><td valign='top' align='right'>
   <a href='FirstSeleniumWebdriverScript.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestEdge (1/2/1)</td><td valign='top' align='right'>
+  <a href='TestEdge.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestFirefox (1/2/1)</td><td valign='top' align='right'>
+  <a href='TestFirefox.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
