parameter passing using @dataprovider and, log4j code

--- a/test-output/old/All Test Suite/methods.html
+++ b/test-output/old/All Test Suite/methods.html
@@ -1,40 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>All Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@1fe20588]">LogoutTest</td> 
-  <td>TestNG-tests-1@1540374340</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:46</td>   <td>-4941</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup(java.lang.String)[pri:0, instance:TestNG.SwagLabsTest@1fe20588]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1540374340</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:47</td>   <td>-3274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@1fe20588]">launch</td> 
-  <td>TestNG-tests-1@1540374340</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:50</td>   <td>-260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest(java.lang.String,java.lang.String)[pri:2, instance:TestNG.SwagLabsTest@1fe20588]">loginTest</td> 
-  <td>TestNG-tests-1@1540374340</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:50</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@1fe20588]">currentUrlTest</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:51</td>   <td>684</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@1fe20588]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1540374340</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2705</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@2ea227af]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest(java.lang.String,java.lang.String)[pri:2, instance:TestNG.SwagLabsTest@2ea227af]">loginTest</td> 
-  <td>TestNG-tests-2@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@2ea227af]">currentUrlTest</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:46</td>   <td>-4941</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup(java.lang.String)[pri:0, instance:TestNG.SwagLabsTest@2ea227af]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@2ea227af]">LogoutTest</td> 
-  <td>TestNG-tests-2@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:50</td>   <td>-60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@2ea227af]">launch</td> 
-  <td>TestNG-tests-2@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:46</td>   <td>-4941</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup(java.lang.String)[pri:0, instance:TestNG.SwagLabsTest@4690b489]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@884452399</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@4690b489]">LogoutTest</td> 
-  <td>TestNG-tests-3@884452399</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2304</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@4690b489]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@884452399</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:52</td>   <td>1126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest(java.lang.String,java.lang.String)[pri:2, instance:TestNG.SwagLabsTest@4690b489]">loginTest</td> 
-  <td>TestNG-tests-3@884452399</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:49</td>   <td>-1491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@4690b489]">launch</td> 
-  <td>TestNG-tests-3@884452399</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>24/10/04 10:59:53</td>   <td>2297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@4690b489]">currentUrlTest</td> 
-  <td></td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:22</td>   <td>0</td> <td title="&gt;&gt;TestAnnotations.beforeSuite()[pri:0, instance:TestNG.TestAnnotations@670002]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeMethod()[pri:0, instance:TestNG.TestAnnotations@670002]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:22</td>   <td>9</td> <td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeTest()[pri:0, instance:TestNG.TestAnnotations@670002]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12474</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterClass()[pri:0, instance:TestNG.TestAnnotations@670002]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:26</td>   <td>3955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.loginTest(java.lang.String,java.lang.String)[pri:2, instance:TestNG.SwagLabsTest@12e61fe6]">loginTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:35</td>   <td>12360</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SwagLabsTest.CloseBrowser()[pri:0, instance:TestNG.SwagLabsTest@12e61fe6]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:24</td>   <td>1360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.launch()[pri:1, instance:TestNG.SwagLabsTest@12e61fe6]">launch</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12489</td> <td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterTest()[pri:0, instance:TestNG.TestAnnotations@670002]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="be656f">  <td>24/10/09 10:37:35</td>   <td>12474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Asserts.testHard()[pri:0, instance:TestNG.TestNG_Asserts@1f0f1111]">testHard</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:32</td>   <td>10202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.currentUrlTest()[pri:3, instance:TestNG.SwagLabsTest@12e61fe6]">currentUrlTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations.testmethod2()[pri:0, instance:TestNG.TestAnnotations@670002]">testmethod2</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12515</td> <td title="&lt;&lt;TestAnnotations.afterSuite()[pri:0, instance:TestNG.TestAnnotations@670002]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeMethod()[pri:0, instance:TestNG.TestAnnotations@670002]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="be656f">  <td>24/10/09 10:37:35</td>   <td>12475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Asserts.testSoft()[pri:0, instance:TestNG.TestNG_Asserts@1f0f1111]">testSoft</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations.testmethod1()[pri:0, instance:TestNG.TestAnnotations@670002]">testmethod1</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterMethod()[pri:0, instance:TestNG.TestAnnotations@670002]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:22</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SwagLabsTest.setup(java.lang.String)[pri:0, instance:TestNG.SwagLabsTest@12e61fe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12466</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotations.beforeClass()[pri:0, instance:TestNG.TestAnnotations@670002]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>24/10/09 10:37:35</td>   <td>12473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotations.afterMethod()[pri:0, instance:TestNG.TestAnnotations@670002]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:33</td>   <td>10217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.titleTest()[pri:4, instance:TestNG.SwagLabsTest@12e61fe6]">titleTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="9fb566">  <td>24/10/09 10:37:33</td>   <td>10220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwagLabsTest.LogoutTest()[pri:5, instance:TestNG.SwagLabsTest@12e61fe6]">LogoutTest</td> 
+  <td>main@295530567</td>   <td></td> </tr>
 </table>
